# cmake-project

./: .gitignore  Makefile  README.md
src/: CMakeLists.txt  main.cpp
